# Jarmuz-OpenGL

./: .gitignore  CMakeLists.txt  README.md  compandrun.sh  driver  main.cpp  makefile
shaders/: basic.shader
src/: CMakeLists.txt  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
